k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trustmebro
  namespace: trustmebro
  labels:
    app: trustmebro
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  # tls:
  # - hosts:
  #   - trustmebro.example.com
  #   secretName: trustmebro-tls
  ingressClassName: traefik
  rules:
  - host: trustmebro.homelab
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
